@@ -1,8 +1,8 @@
-/*
-    Copyright 2008-2017, Felspar Co Ltd. http://fost.3.felspar.com/
+/**
+    Copyright 2008-2018, Felspar Co Ltd. <http://support.felspar.com/>
+
     Distributed under the Boost Software License, Version 1.0.
-    See accompanying file LICENSE_1_0.txt or copy at
-        http://www.boost.org/LICENSE_1_0.txt
+    See <http://www.boost.org/LICENSE_1_0.txt>
 */
 
 
@@ -14,15 +14,9 @@
 FSL_TEST_SUITE( digests );
 
 
-FSL_TEST_FUNCTION( sha1 ) {
-    // http://en.wikipedia.org/wiki/Examples_of_SHA_digests
-    FSL_CHECK_EQ( fostlib::sha1(fostlib::string()),
-        L"da39a3ee5e6b4b0d3255bfef95601890afd80709");
-    FSL_CHECK_EQ( fostlib::sha1("The quick brown fox jumps over the lazy dog" ),
-        L"2fd4e1c67a2d28fced849ee1bb76e7391b93eb12");
-    FSL_CHECK_EQ( fostlib::sha1("The quick brown fox jumps over the lazy cog" ),
-        L"de9f2c7fd25e1b3afad3e85a0bd17d9b100db4b3");
-}
+/**
+    ## sha1
+ */
 
 
 FSL_TEST_FUNCTION( sha1_empty ) {
@@ -63,6 +57,25 @@ FSL_TEST_FUNCTION(sha1_memory) {
         fostlib::coerce<fostlib::hex_string>(ex2.digest()),
         fostlib::hex_string("2fd4e1c67a2d28fced849ee1bb76e7391b93eb12"));
 }
+
+
+/**
+    ## ripemd256
+ */
+
+
+FSL_TEST_FUNCTION(ripemd256_empty) {
+    fostlib::digester ex1(fostlib::ripemd256);
+    FSL_CHECK_EQ(
+        fostlib::coerce< fostlib::hex_string >( ex1.digest() ),
+        fostlib::hex_string("02ba4c4e5f8ecd1877fc52d64d30e37a2d9774fb1e5d026380ae0168e3c5522d"));
+}
+
+
+/**
+    ## md5
+ */
+
 
 FSL_TEST_FUNCTION( md5_empty ) {
     fostlib::digester ex1( fostlib::md5 );
