@@ -1,8 +1,8 @@
-/*
-    Copyright 2007-2017, Felspar Co Ltd. http://support.felspar.com/
+/**
+    Copyright 2007-2018, Felspar Co Ltd. <http://support.felspar.com/>
+
     Distributed under the Boost Software License, Version 1.0.
-    See accompanying file LICENSE_1_0.txt or copy at
-        http://www.boost.org/LICENSE_1_0.txt
+    See <http://www.boost.org/LICENSE_1_0.txt>
 */
 
 
@@ -11,11 +11,9 @@
 #include <fost/crypto.hpp>
 #include <fost/exception/out_of_range.hpp>
 
-#ifdef __GNUC__
-    #pragma GCC diagnostic ignored "-Wunused-function"
-#endif
 #define CRYPTOPP_ENABLE_NAMESPACE_WEAK 1
 #include <crypto++/md5.h>
+#include <crypto++/ripemd.h>
 #include <crypto++/sha.h>
 
 
@@ -46,3 +44,9 @@ string fostlib::sha1(const f5::u8view &text) {
 string fostlib::sha256(const f5::u8view &text) {
     return hash<CryptoPP::SHA256>(text);
 }
+
+
+string fostlib::ripemd256(const f5::u8view &text) {
+    return hash<CryptoPP::RIPEMD256>(text);
+}
+
