@@ -1,8 +1,8 @@
-/*
-    Copyright 2008-2017, Felspar Co Ltd. http://support.felspar.com/
+/**
+    Copyright 2008-2018, Felspar Co Ltd. <http://support.felspar.com/>
+
     Distributed under the Boost Software License, Version 1.0.
-    See accompanying file LICENSE_1_0.txt or copy at
-        http://www.boost.org/LICENSE_1_0.txt
+    See <http://www.boost.org/LICENSE_1_0.txt>
 */
 
 
@@ -61,10 +61,11 @@ namespace fostlib {
     }
 
 
-    /// Digests
-    FOST_CRYPTO_DECLSPEC string md5(const f5::u8view &str);
-    FOST_CRYPTO_DECLSPEC string sha1(const f5::u8view &str);
-    FOST_CRYPTO_DECLSPEC string sha256(const f5::u8view &str);
+    /// ## Cryptographic hashing functions
+    FOST_CRYPTO_DECLSPEC string md5(const f5::u8view &);
+    FOST_CRYPTO_DECLSPEC string sha1(const f5::u8view &);
+    FOST_CRYPTO_DECLSPEC string sha256(const f5::u8view &);
+    FOST_CRYPTO_DECLSPEC string ripemd256(const f5::u8view &);
 
     /// The type of a digester used as an argument
     using digester_fn = string (*)(const f5::u8view &);
